TEIID-689: using valueof methods for value retrieval